--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
   "name": "car-purchase-server",
   "version": "1.0.0",
-  "main": "index.js",
-  "engines": {
-    "node": "20.x"
-  },
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
