--- a/package.json
+++ b/package.json
@@ -1,21 +1,15 @@
 {
-  "name": "car-purchase-server",
+  "name": "seu-projeto",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "axios": "^1.7.2",
-    "body-parser": "^1.20.2",
+    "express": "^4.17.1",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "helmet": "^7.1.0",
-    "sqlite3": "^5.1.7"
+    "helmet": "^4.6.0",
+    "sqlite3": "^5.0.0"
   }
 }
